css/core-style.css
/*
* Import Others CSS
*/

@import '../css/magnific-popup.css';

/*
* Base CSS
*/

* {
    margin: 0;
    padding: 0;
}

.floatleft {
    float: left
}

.floatright {
    float: right
}

.alignleft {
    float: left;
    margin-right: 15px;
}

.alignright {
    float: right;
    margin-left: 15px;
}

.aligncenter {
    display: block;
    margin: 0 auto 15px;
}

body {
    position: relative;
    overflow-x: hidden;
}
.headerfont {
    font-family: 'Playfair Display SC', serif;
}
.otherfont {
    font-family: 'Dosis', sans-serif;
}

}
.floatleft {
    float: left
}

.floatright {
    float: right
}

.alignleft {
    float: left;
    margin-right: 15px;
}

.alignright {
    float: right;
    margin-left: 15px;
}

.aligncenter {
    display: block;
    margin: 0 auto 15px;
}

h1,
h2,
h3,
h4,
h5,
h6 {
    color: #111;
    margin: 0 0 15px;
    line-height: 1.3
}

p {
    color: #555;
    font-size: 1em;
    line-height: 1.5;
    font-family:'Dosis', sans-serif;
}

a:focus {
    outline: 0px solid;
}

a,
a:hover,
a:focus {
    -webkit-transition: all 500ms ease 0s;
    transition: all 500ms ease 0s;
    text-decoration: none;
    outline: none;
    color: #111;
}

.btn {
    -webkit-box-shadow: 3px 2px 3px rgba(0, 0, 0, 0.15);
    box-shadow: 3px 2px 3px rgba(0, 0, 0, 0.15);
}

.btn:hover {
    -webkit-box-shadow: 5px 5px 24px rgba(0, 0, 0, 0.15);
    box-shadow: 5px 5px 24px rgba(0, 0, 0, 0.15);
}

ul {
    margin: 0;
}

ol li,
ul li {
    list-style: outside none none;
}

img {
    height: auto;
    max-width: 100%;
}

.background-overlay,
.background-overlay-white {
    position: relative;
    z-index: 2;
    background-position: center center;
    background-size: cover;
}

.background-overlay:before {
    position: absolute;
    z-index: -1;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    content: "";
    background-color: rgba(0, 0, 0, 0.5);
}

.background-overlay-white:before {
    position: absolute;
    z-index: -1;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    content: "";
    background-color: rgba(255, 255, 255, 0.5);
}

.table {
    display: table;
    z-index: 9;
    position: absolute;
    width: 100%;
    height: 100%;
    margin: 0;
}

.table_cell {
    display: table-cell;
    vertical-align: middle;
}

.margin_top_30 {
    margin-top: 30px;
}

.mt_50 {
    margin-top: 50px;
}

.mt15 {
    margin-top: 15px;
}

.mb15 {
    margin-bottom: 15px;
}

.section_padding_50 {
    padding: 50px 0;
}

.section_padding_50_20 {
    padding: 50px 0 20px 0;
}

.section_padding_150 {
    padding: 150px 0;
}

.section_padding_0 {
    padding: 0;
}

.section_padding_100 {
    padding: 100px 0;
}

.section_padding_100_0 {
    padding: 100px 0 0 0;
}

.section_padding_0_100 {
    padding: 0 0 100px 0;
}

.section_padding_0_70 {
    padding: 0 0 70px 0;
}

.section_padding_100_50 {
    padding-top: 100px;
    padding-bottom: 50px;
}

.section_padding_special {
    padding-top: 100px;
    padding-bottom: 70px; 
}

.section_padding_100_70 {
    padding-top: 100px;
    padding-bottom: 70px;
}

.section_padding_200 {
    padding-top: 200px;
    padding-bottom: 200px;
}

.section_padding_200_100 {
    padding-top: 200px;
    padding-bottom: 100px;
}

.section_padding_200_70 {
    padding-top: 200px;
    padding-bottom: 70px;
}

.section_padding_200_170 {
    padding-top: 200px;
    padding-bottom: 170px;
}

.section_padding_200_0 {
    padding-top: 200px;
    padding-bottom: 0;
}

.slidea-control-thumbnail {
    width: 150px;
}

.bg-white {
    background-color: #fff;
}

.bg-dark {
    background-color: #000;
}

.bg-transparent {
    background-color: transparent;
}

.bg-transparent-dark {
    background-color: rgba(0, 0, 0, 0.5) !important;
}

.bg-transparent-light {
    background-color: rgba(255, 255, 255, 0.5) !important;
}

.bg-dark3-4 {
    background-color: rgba(0, 0, 0, 0.75) !important;
}

.bg-dark2-4 {
    background-color: rgba(0, 0, 0, 0.5) !important;
}

.font-bold {
    font-weight: 700;
}

.font-light {
    font-weight: 300;
}

.line {
    width: 100%;
    height: 1px;
    background-color: #ddd;
    margin: 30px 0;
}

.box-shadow-with-bg-gray {
    border-radius: 4px;
    background-color: #f6f6f6 !important;
    -webkit-transition-duration: 500ms;
    transition-duration: 500ms;
}

.box-shadow-with-bg-gray:hover {
    -webkit-box-shadow: 3px 2px 3px rgba(0, 0, 0, 0.15);
    box-shadow: 3px 2px 3px rgba(0, 0, 0, 0.15);
}

.box-shadow-with-bg-white {
    border-radius: 4px;
    -webkit-transition-duration: 500ms;
    transition-duration: 500ms;
    background-color: #fff !important;
}

.box-shadow-with-bg-white:hover {
    -webkit-box-shadow: 3px 2px 3px rgba(0, 0, 0, 0.15);
    box-shadow: 3px 2px 3px rgba(0, 0, 0, 0.15);
}

.blue-bg {
    background-color: #3498db !important;
    color: #fff !important;
}

.bg-gray {
    background-color: #f6f6f6 !important;
}

.height_500 {
    height: 500px !important;
}

.height_600 {
    height: 600px !important;
}

.height_700 {
    height: 700px !important;
}

.height_800 {
    height: 800px !important;
}

.jarallax {
    background-size: cover;
    background-repeat: no-repeat;
    background-position: 50% 50%;
}

.midnight_blue {
    color: #2c3e50 !important;
}


/*
* Preloader CSS
*/

#preloader {
    overflow: hidden;
    background-color: #fff;
    height: 100%;
    left: 0;
    position: fixed;
    top: 0;
    width: 100%;
    z-index: 999999;
}

.classy-load {
    -webkit-animation: 2000ms linear 0s normal none infinite running classy-load;
    animation: 2000ms linear 0s normal none infinite running classy-load;
    background: transparent none repeat scroll 0 0;
    border-color: #dddddd #dddddd #111111;
    border-radius: 50%;
    border-style: solid;
    border-width: 2px;
    height: 40px;
    left: calc(50% - 20px);
    position: relative;
    top: calc(50% - 20px);
    width: 40px;
    z-index: 9;
}
/* ... */

